Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26542

var prop doesn't update to null on assigned object deletion

XMLWordPrintable

      If a QML object has a variant property to which an qobject is assigned, when the qobject is deleted the variant property will change value to null, and emit a change signal. Var properties do not conform to this behavior, and since var properties deprecate variant properties, this is a bug.

        1. varpropdelete.tar
          10 kB
          Christopher Adams (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes