Update var property to null on object deletion

When a var property contains a pointer to a QObject-derived instance,
ensure that object deletion causes the property to be updated.

Task-number: QTBUG-26542
Change-Id: I67a59ffd7f09063328d45dc84889add55a5428e4
Reviewed-by: Martin Jones <martin.jones@nokia.com>